<resources>
    <!-- Non-Translatable -->
    <string name="app_name" translatable="false">FlopE Tracker</string>
    <string name="logo_hint" translatable="false">Flop Logo</string>
    <string name="currency_usd" translatable="false">USD</string>
    <string name="currency_khr" translatable="false">KHR</string>
    <string name="label_Id" translatable="false">Id:</string>

    <!-- Translatable -->
    <!-- Buttons -->
    <string name="add_expense">Add Expense</string>
    <string name="button_view_expense">View Detail Expense</string>
    <string name="button_expense_list">Expense List</string>
    <string name="button_setting">Setting</string>
    <string name="button_home">Home</string>
    <string name="button_back_home">Back to home</string>
    <string name="button_add_category">Add category</string>
    <string name="button_show_categories">Show existing categories</string>
    <string name="button_log_in">Log In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_log_out">Log Out</string>

    <!-- Labels -->
    <string name="welcome_message">Welcome flops!</string>
    <string name="label_amount">Amount</string>
    <string name="label_category">Category</string>
    <string name="label_remark">Remark</string>
    <string name="label_created_by">Created By</string>
    <string name="title_main_activity">Manage Your Expense, Flops</string>
    <string name="label_total_USD">My total USD expense is:</string>
    <string name="label_total_KHR">My total KHR expense is:</string>
    <string name="label_most_spent_category">Most Spent Category(ies):</string>
    <string name="label_add_category">Add New Category</string>
    <string name="label_date">Date</string>
    <string name="label_view">View</string>
    <string name="label_delete">Delete</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_log_in_msg">Welcome flops, please log in!</string>
    <string name="label_sign_up_msg">Welcome flops, please sign up!</string>
    <string name="label_to_register">Don\'t have an account?</string>
    <string name="label_to_login">Already have an account?</string>
    <string name="label_language">Language</string>
    <string name="label_setting">App Setting</string>
    <string name="label_setting_msg">Configure your preferences below, flops</string>

    <!-- Arrays -->
    <string-array name="categories_array">
        <item>Food</item>
        <item>Transport</item>
        <item>Shopping</item>
        <item>Beverage</item>
        <item>Entertainment</item>
        <item>Fitness</item>
        <item>Utilities</item>
        <item>Others</item>
    </string-array>
    <string name="label_expense_id">Expense Id:</string>
    <string name="hide_categories">Hide existing categories</string>
    <string name="image">Image</string>
    <string name="capture_image">Capture An Image</string>
    <string name="select_image">Select An Image</string>
</resources>