<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_button"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/button_home"/>

    <item
       android:id="@+id/add_button"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/button_add_expense" />

    <item
        android:id="@+id/list_button"
        android:enabled="true"
        android:icon="@drawable/baseline_list_24"
        android:title="@string/button_expense_list" />

    <item
        android:id="@+id/logout_button"
        android:enabled="true"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/button_log_out" />
</menu>