<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddExpenseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            style="@style/HeadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_expense"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_amount"
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_amount"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_layout"
            style="@style/NoUnderlineTextInputLayout"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/label_amount"
                android:background="@drawable/ui_border"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_amount_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amount_layout">

            <RadioButton
                android:id="@+id/radioUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/currency_usd" />

            <RadioButton
                android:id="@+id/radioKHR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_khr" />
        </RadioGroup>

        <TextView
            android:id="@+id/label_category"
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_category"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_amount_currency" />

        <Spinner
            android:id="@+id/categories_spinner"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/spinner_background"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_category" />

        <ImageButton
            android:id="@+id/add_categories_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:contentDescription="@string/label_add_category"
            android:src="@drawable/baseline_add_box_24"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/categories_spinner"
            app:layout_constraintTop_toBottomOf="@id/label_category" />

        <TextView
            android:id="@+id/label_remark"
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_remark"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categories_spinner" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/remark_layout"
            style="@style/NoUnderlineTextInputLayout"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            app:hintEnabled="false"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_remark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/remark_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/label_remark"
                android:background="@drawable/ui_border"
                android:gravity="top|start"
                android:inputType="textMultiLine|textCapSentences"
                android:minLines="3"
                android:maxLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_expense_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_expense"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/remark_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>