<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="132dp"
        android:layout_height="124dp"
        android:contentDescription="@string/logo_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/title"
        style="@style/HeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="653dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_amount"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_layout"
        style="@style/NoUnderlineTextInputLayout"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:hint="@string/label_amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ui_border"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_amount_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416">

        <RadioButton
            android:id="@+id/radioUSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_usd" />

        <RadioButton
            android:id="@+id/radioKHR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_khr" />
    </RadioGroup>

    <TextView
        android:id="@+id/label_category"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/remark_layout"
        style="@style/NoUnderlineTextInputLayout"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:hint="@string/label_remark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/remark_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ui_border"
            android:gravity="top|start"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="3"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:overScrollMode="always" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_expense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <Spinner
        android:id="@+id/categories_spinner"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:background="@drawable/spinner_background"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />

    <TextView
        android:id="@+id/label_remark"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_remark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

</androidx.constraintlayout.widget.ConstraintLayout>